# psql-exp

./: flake.nix
backend/: .env  .gitignore  Cargo.toml  diesel.toml
backend/migrations/2024-12-11-215015_create_posts/: down.sql  up.sql
backend/src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
client/: Cargo.toml
client/src/: main.rs
client/src/api/: get.rs  post.rs
client/src/components/: mod.rs  spellcard.rs  spellform.rs
client/src/pages/: home.rs  modify.rs  search.rs
shared/: Cargo.toml
shared/src/types/: mod.rs  shapes.rs  spell.rs  stats.rs
spellbook/: .gitignore  Cargo.toml  package-lock.json  package.json
spellbook/src/: main.rs
spellbook/src/components/: navbar.rs  spellcard.rs
spellbook/src/pages/: mod.rs  modify.rs
spellbook/src/types/: shapes.rs  spell.rs  stats.rs
