[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = "0.3.76"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
shared = { path = "../shared" }
serde = "1.0.217"
serde_json = "1.0.135"
serde_derive = "1.0.217"
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.49"
dotenvy = "0.15.7"
structmap = "0.1.6"
ureq = { version = "3.0.0-rc4", features = ["json"] }
rustls = "0.23.20"